src/components/background_banner/background_banner.sass
@import "../base.sass"
.background__banner
    height: 425px !important
    border-bottom: 0.5px solid $accent
    display: flex
    @include tablet-phone 
      height: 70vh !important
    &__col
        width: 100%
        display: flex
        justify-content: center 
        align-items: center
        &__one
            display: flex 
            justify-content: center 
            align-items: center
            align-content: center
            width: 35%
            height: 100%
            @include tablet-phone
                width: 100%
                height: 55%
                // background: lightgreen
            &__image 
              display: flex 
              align-content: center
              align-items: center
              justify-content: center
              width: 100%
              height: 80%
              &__container
                // background: red
                object-position: left !important
                width: 100%
                height: 100%
                max-height: 100%
                // background: yellow
                position: relative
                @include tablet-phone 
                    height: 80%
                    // background: pink
                    // width: auto
                .gatsby-image-wrapper, img 
                  object-fit: contain !important
                  object-position: left !important
                  height: 100% !important
                  max-height: 100% !important
                  @include tablet-phone 
                    object-position: center !important
                img 
                  height: 100% !important
                  
                  // .gatsby-image-wrapper
                  //   display: flex !important
                  //   position: relative !important 
                  //   margin: 0 auto
                  //   max-height: 100% !important
                  //   height: 100% !important
                  //   @include tablet-phone 
                  //     height: auto !important
                  //     width: auto !important
                  //   img 
                  //     max-height: 100% !important
                  //     width: auto !important
        &__two
            display: flex
            flex-direction: column
            justify-content: center
            // background: green
            max-height: 100%
            height: 100%
            width: 65%
            padding: 3em 0em
            @media(max-width: 800px)
              width: 60%
            // background: seagreen
            // justify-content: space-between
            &__top, &__bottom 
              width: 85%
            &__top
              h2 
                margin-top: -10px
              h4 
                margin-top: 1em
                @include tablet-phone 
                  margin-top: 0em
                  margin-bottom: .5em
            &__bottom 
              display: flex 
              flex-direction: column
              align-items: flex-end
              @include tablet-phone 
                align-items: center !important
                text-align: center !important
              &__btn
                display: flex
                width: 100%
              button 
                margin-top: 1.25em
            @include tablet-phone
                height: 40%
                width: 100%
            // p
            //     color: $light
            //     // padding-top: 3em
            //     // padding-bottom: 1em
            // h2
            //     // padding: 0px 0px 10px 0px
            //     font-size: 45px
            // h3
            //     font-size: 30px
            //     padding: 0px 0px 5px 0px
            // h4
            //     color: #9f958b
    hr
        background: #cdccca
        border: 0
        height: 1px
        box-shadow: 0px 4px 5px 0px rgba(205,204,200,1)

